--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a285">  <td>20/05/05 21:55:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demo.testww()[pri:0, instance:tests.demo@9660f4e]">testww</td> 
-  <td>main@1800890735</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/05/06 08:44:06</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UserMangTests.startUp()[pri:0, instance:tests.UserMangTests@1f554b06]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1208736537</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/05/06 08:44:06</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserMangTests.getSingleUserDetails()[pri:0, instance:tests.UserMangTests@1f554b06]">getSingleUserDetails</td> 
+  <td>main@1208736537</td>   <td></td> </tr>
 </table>
