add interview question

--- a/test-output/Default suite/Default test.html
+++ b/test-output/Default suite/Default test.html
@@ -75,10 +75,10 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='tests.DeleteApisTests.test1()'><b>test1</b><br>Test class: tests.DeleteApisTests</td>
+<td title='APITests.DeleteApisTests.test1()'><b>test1</b><br>Test class: tests.DeleteApisTests</td>
 <td></td>
 <td>3</td>
-<td>tests.DeleteApisTests@7c29daf3</td></tr>
+<td>APITests.DeleteApisTests@7c29daf3</td></tr>
 </table><p>
 </body>
 </html>
