--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.DeleteApisTests" hash-for-method="test1">test1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DeleteApisTests" hash-for-method="test1">test1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.DeleteApisTests</span>
+              <span class="class-name">APITests.DeleteApisTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.DeleteApisTests&quot;/&gt;
+      &lt;class name=&quot;APITests.DeleteApisTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -177,21 +177,21 @@
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
-var data = new google.visualization.DataTable();
-data.addColumn('number', 'Number');
-data.addColumn('string', 'Method');
-data.addColumn('string', 'Class');
-data.addColumn('number', 'Time (ms)');
-data.addRows(1);
-data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test1')
-data.setCell(0, 2, 'tests.DeleteApisTests')
-data.setCell(0, 3, 3127);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
-return data;
-}
+                suiteTableInitFunctions.push('tableData_Default_suite');
+                function tableData_Default_suite() {
+                var data = new google.visualization.DataTable();
+                data.addColumn('number', 'Number');
+                data.addColumn('string', 'Method');
+                data.addColumn('string', 'Class');
+                data.addColumn('number', 'Time (ms)');
+                data.addRows(1);
+                data.setCell(0, 0, 0)
+                data.setCell(0, 1, 'test1')
+                data.setCell(0, 2, 'APITests.DeleteApisTests')
+                data.setCell(0, 3, 3127);
+                window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+                return data;
+                }
               </script>
               <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
@@ -219,7 +219,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.DeleteApisTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">APITests.DeleteApisTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">test1</span>
                 <span class="method-start">0 ms</span>
